[project]
name = "gnss_explorer"
version = "0.0.1"
authors = [{ name = "Andrew Cragg", email = "apcragg@gmail.com" }]

requires-python = ">=3.12"

dependencies = [
    "numpy>2",
    "numba>=0.60.0",
    "pyadi-iio>=0.0.17",
    "ipython>=8.32.0",
    "ipykernel>=6.29.5",
    "typing-extensions>=4.12.2",
    "pyqt6>=6.8.0",
    "pyproj>=3.7.1",
    "pydantic>=2.10.6",
    "click>=8.1.8",
    "matplotlib",
    "cartopy>=0.24.1",
    "uhd_local @ file:///opt/uhd/uhd-wheel/dist/repaired/uhd_local-4.9.0.post0-cp312-cp312-manylinux_2_39_x86_64.whl",
    "allantools>=2024.6",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.2"]

dev-dependencies = ["pyright>=1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.uv.sources]
matplotlib = { git = "https://github.com/matplotlib/matplotlib", rev = "main" }


[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
lint.select = ["ALL"]
lint.ignore = [
    "COM",    # flake8-commas
    "SIM108", # Annoying ternary operator suggestion
    "G004",   # f-strings while logging are fine, chill
    "SIM",    # Let me decide what to simplify
    "LOG015", # I will use the root logger. Context is for cowards.
    "D105",   # No need to document magic methods
    "D417"
]
lint.pydocstyle.convention = "google"

[dependency-groups]
lint = ["ruff>=0.9.4"]
dev = [
    "auditwheel>=6.4.2",
    "build>=1.3.0",
    "ipython>=9.8.0",
    "mako>=1.3.10",
    "pybind11>=3.0.1",
    "pytest>=8.3.4",
    "scikit-build-core>=0.11.6",
    "setuptools>=80.9.0",
    "ty>=0.0.8",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["gnss_explorer"]
pythonVersion = "3.13"
reportFunctionMemberAccess = "error"
reportImportCycles = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnusedClass = "error"
reportUnusedExpression = "error"
reportUnusedVariable = "error"
useLibraryCodeForTypes = true
